# PropertyEditor

./: .gitignore
.github/workflows/: build.yml
src/: CMakeLists.txt
src/PropertyEditorDemo/: CMakeLists.txt  PropertyEditorTest.cpp  PropertyEditorTest.h  PropertyEditorTest.ui  main.cpp
src/PropertyEditorDemo/cmake/: appFlags.cmake  commonTools.cmake
src/libPropertyEditor/: CMakeLists.txt  PropertyEditor.cpp  PropertyEditor.h  PropertyEditor.ui  PropertyEditorDialog.cpp  PropertyEditorDialog.h  PropertyEditorDialog.ui
src/libPropertyEditor/editors/: ArrayEditorWidget.cpp  ArrayEditorWidget.h  ArrayEditorWidget.ui  BoolEditorWidget.cpp  BoolEditorWidget.h  BoolEditorWidget.ui  ColorEditorWidget.cpp  ColorEditorWidget.h  ColorEditorWidget.ui  DoubleEditorWidget.cpp  DoubleEditorWidget.h  DoubleEditorWidget.ui  EnumEditorWidget.cpp  EnumEditorWidget.h  EnumEditorWidget.ui  FloatEditorWidget.cpp  FloatEditorWidget.h  FloatEditorWidget.ui  IntEditorWidget.cpp  IntEditorWidget.h  IntEditorWidget.ui  PointFEditorWidget.cpp  PointFEditorWidget.h  PointFEditorWidget.ui  RectFEditorWidget.cpp  RectFEditorWidget.h  RectFEditorWidget.ui  StringEditorDialog.cpp  StringEditorDialog.h  StringEditorDialog.ui  StringEditorWidget.cpp  StringEditorWidget.h  StringEditorWidget.ui  Switcher.cpp  Switcher.h  Switcher.ui
